# pysondehub

./: README.md  example.py  pyproject.toml
examples/: README.md  example.py  live.py  sondehub-athena.ipynb  sondehub.ipynb
sondehub/: __init__.py  __main__.py  amateur.py
