[tool.poetry]
name = "sondehub"
version = "0.1.9"
description = "SDK to access SondeHub open data"
authors = ["Michaela <git@michaela.lgbt>"]
readme = "README.md"
homepage = "https://github.com/projecthorus/pysondehub"
repository = "https://github.com/projecthorus/pysondehub.git"
documentation = "https://github.com/projecthorus/pysondehub"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
paho-mqtt = "^1.5.1"
boto3 = "^1.14.44"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sondehub = 'sondehub:__main__.main'